// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FirstUser /> should render 1`] = `
<Container__WallContainer>
  <Container__WallDialog
    size="lg"
  >
    <Box__BoxGroupHeader>
      <h2>
        Setup User
      </h2>
      <p>
        Create an initial administrative user to start using Virtool.
      </p>
    </Box__BoxGroupHeader>
    <form
      onSubmit={[Function]}
    >
      <Box__BoxGroupSection>
        <InputGroup>
          <Input__InputLabel>
            Username
          </Input__InputLabel>
          <Input
            name="username"
            onChange={[Function]}
            value="bob"
          />
        </InputGroup>
        <InputGroup>
          <Input__InputLabel>
            Password
          </Input__InputLabel>
          <PasswordInput
            name="password"
            onChange={[Function]}
            value="password"
          />
        </InputGroup>
      </Box__BoxGroupSection>
      <Container__WallDialogFooter>
        <Button
          color="blue"
          disabled={false}
          icon="user-plus"
          tipPlacement="top"
          type="submit"
        >
          Create User
        </Button>
      </Container__WallDialogFooter>
    </form>
  </Container__WallDialog>
</Container__WallContainer>
`;

exports[`<FirstUser /> should render when "password" changed 1`] = `
<Container__WallContainer>
  <Container__WallDialog
    size="lg"
  >
    <Box__BoxGroupHeader>
      <h2>
        Setup User
      </h2>
      <p>
        Create an initial administrative user to start using Virtool.
      </p>
    </Box__BoxGroupHeader>
    <form
      onSubmit={[Function]}
    >
      <Box__BoxGroupSection>
        <InputGroup>
          <Input__InputLabel>
            Username
          </Input__InputLabel>
          <Input
            name="username"
            onChange={[Function]}
            value=""
          />
        </InputGroup>
        <InputGroup>
          <Input__InputLabel>
            Password
          </Input__InputLabel>
          <PasswordInput
            name="password"
            onChange={[Function]}
            value="password"
          />
        </InputGroup>
      </Box__BoxGroupSection>
      <Container__WallDialogFooter>
        <Button
          color="blue"
          disabled={false}
          icon="user-plus"
          tipPlacement="top"
          type="submit"
        >
          Create User
        </Button>
      </Container__WallDialogFooter>
    </form>
  </Container__WallDialog>
</Container__WallContainer>
`;

exports[`<FirstUser /> should render when "username" changed 1`] = `
<Container__WallContainer>
  <Container__WallDialog
    size="lg"
  >
    <Box__BoxGroupHeader>
      <h2>
        Setup User
      </h2>
      <p>
        Create an initial administrative user to start using Virtool.
      </p>
    </Box__BoxGroupHeader>
    <form
      onSubmit={[Function]}
    >
      <Box__BoxGroupSection>
        <InputGroup>
          <Input__InputLabel>
            Username
          </Input__InputLabel>
          <Input
            name="username"
            onChange={[Function]}
            value="bob"
          />
        </InputGroup>
        <InputGroup>
          <Input__InputLabel>
            Password
          </Input__InputLabel>
          <PasswordInput
            name="password"
            onChange={[Function]}
            value=""
          />
        </InputGroup>
      </Box__BoxGroupSection>
      <Container__WallDialogFooter>
        <Button
          color="blue"
          disabled={false}
          icon="user-plus"
          tipPlacement="top"
          type="submit"
        >
          Create User
        </Button>
      </Container__WallDialogFooter>
    </form>
  </Container__WallDialog>
</Container__WallContainer>
`;
